docs/themes/avocadocs/static/styles/customizations.css
/* ... */
/* columns */
* {
  box-sizing: border-box;
}

/* Create two equal columns that floats next to each other */
.column {
  float: left;
  width: 50%;
  padding: 1%;
}

/* .accordion {
  padding-left: 10rem;
  padding-right: 10rem;
} */

/* .card-body {
  padding: 5rem;
} */

/* Sidebar */

hr {
  border-top: 1.5px solid #ffffff;
  margin-left: 1.5rem;
  margin-right: 1.5rem;
}

/* Code tabs */

.tabs {
  margin-bottom: 2rem;
}


.nav-link {
  display: block;
  padding: .5rem .5rem;
  font-size: 16px;
  line-height: 20px;
  font-weight: 700;
  color: #ffffff;
}

.nav-link-top {
  display: block;
  padding: .25rem .5rem;
  font-size: 22px;
  line-height: 40px;
  font-weight: 700;
  color: #ffffff;
}

.nav-link-top:hover {
  color: #ffffff;
}

/* Underline active books */

.nav-link-top > .active-book {
  border-bottom: .1rem solid #ffffff;
}


.nav-tabs .nav-link {
  color: var(--brand-font-color-black);
  background-color: var(--info);
  color: var(--white);
}

.nav-tabs .nav-link.active,
.nav-tabs .show > .nav-link {
  color: var(--brand-color-primary-blue);
  background-color: #fff;
  border-bottom: .5px solid var(--primary);
  /* border-bottom: none; */
  background-color: var(--primary);
}

.tab-content > .active {
  display: block;
  /* background-color: var(--primary); */
  /* background-color: #f0f0f0; */
  /* border: 1.5px solid #dddddd; */
  /* border: 0rem !important; */
  /* border-right: 1px solid var(--brand-font-color-black);
  border-left: 1px solid var(--brand-font-color-black);
  border-bottom: 1px solid var(--brand-font-color-black); */
  /* padding: 1rem !important; */
  padding-bottom: .5rem;
  /* box-sizing: none !important; */
  /* max-height: 200px;
  overflow-y: scroll;
  top: 0;
  bottom: 0; */
}

.tab-content > .active > .highlight > pre {
  max-height: 30rem;
  overflow: scroll;
}

/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
}

table {
  font-family: arial, sans-serif;
  border-collapse: collapse;
  width: 100%;
  margin-bottom: 2rem;
}

td, th {
  border: 1px solid #dddddd;
  text-align: left;
  padding: 8px;
}

blockquote {
  color: #333;
  border: none;
  background: #e0f5fd;
  padding: 10px 25px;
}
blockquote p {
  margin-bottom: 10px;
}
/* blockquote code {
  background: #f7f7f7;
  color: #333;
} */

.collapsible {
  background-color: var(--white);
  color: var(--primary);
  cursor: pointer;
  width: 100%;
  border: 1px solid var(--primary);
  text-align: left;
  outline: var(--primary);
  padding: 0.75rem 1rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0.25rem;
}

.collapsible.active, .collapsible:hover {
  background-color: var(--primary);
  color: var(--white);
}

.collapsible-content {
  display: none;
  overflow: hidden;
  background-color: var(--white);
  border: 1px solid var(--primary);
  outline: var(--primary);
  padding: 0.75rem 1rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0.25rem;
}

.table-changelog {
  width: 100%;
  margin-bottom: 1rem;
  color: #4a4f54;
  border-left: 1px solid #fff;
}

.table-changelog th,
.table-changelog td {
  padding: 0.75rem;
  vertical-align: top;
  border-top: 1px solid #fff !important;
  border-bottom: 1px solid #fff;
  border-left: 1px solid #fff;
  border-right: 1px solid #fff;
}

.table-changelog thead th {
  vertical-align: bottom;
  border-bottom: 2px solid #fff !important;
}

.table-changelog tbody + tbody {
  border-top: 2px solid #fff !important;
}

@media (max-width: 1024px) {

  .duik-sidebar {
    padding-top: 3rem !important;
  }
}

.duik-sidebar {
  padding-top: 5rem;
}

